--- a/style.css
+++ b/style.css
@@ -94,6 +94,7 @@ h2.sud {
   font-size: 12px;
   color: #FAFAFA;
   margin: auto;
+  animation: introZOBlur 800ms cubic-bezier(0.65, 0.05, 0.36, 1);
 }
 
 /* BLUR */
@@ -209,13 +210,25 @@ div.modal.active {
   }
 }
 
-@keyframes introFade {
+@keyframes introBlur {
   0% {
-    opacity: 0;
+    filter: blur(10px);
   }
 
   100% {
-    opacity: 1;
+    filter: blur(0);
+  }
+}
+
+@keyframes introZOBlur {
+  0% {
+    filter: blur(10px);
+    font-size: 1.5em;
+  }
+
+  100% {
+    filter: blur(0);
+    font-size: 0.75em;
   }
 }
 
